# wgsl-cpp-pp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp
examples/cli/: CMakeLists.txt  README.md  main.cpp  shader.wgsl
examples/web/: README.md  app.js  index.html  setup-standalone.sh  styles.css
include/: pre_wgsl.hpp  wgslpp.hpp
tests/: CMakeLists.txt  test_preprocessor.cpp
tests/shaders/: arith_if.wgsl  defined_expr.wgsl  defined_ifdef.wgsl  include_a.wgsl  main_include.wgsl  nested_if.wgsl  recursive_a.wgsl  recursive_b.wgsl
wasm/: .npmignore  CMakeLists.txt  bindings.cpp  build-wasm.sh  index.ts  package-lock.json  package.json  pre-wgsl.mjs.d.ts  tsconfig.json
